--- a/azure_windows_vm.yml
+++ b/azure_windows_vm.yml
@@ -1,88 +1,63 @@
-
+- name: Create Azure VM
+  hosts: localhost
+  connection: local
+  tasks:
   - name: Create resource group
     azure_rm_resourcegroup:
       name: myResourceGroup
       location: eastus
-
- - name: Create virtual network
+  - name: Create virtual network
     azure_rm_virtualnetwork:
       resource_group: myResourceGroup
-      name: vNet
+      name: myVnet
       address_prefixes: "10.0.0.0/16"
-
   - name: Add subnet
     azure_rm_subnet:
       resource_group: myResourceGroup
-      name: subnet
+      name: mySubnet
       address_prefix: "10.0.1.0/24"
-      virtual_network: vNet
-- name: Create public IP address
+      virtual_network: myVnet
+  - name: Create public IP address
     azure_rm_publicipaddress:
       resource_group: myResourceGroup
       allocation_method: Static
-      name: pip
+      name: myPublicIP
     register: output_ip_address
-
-  - name: Output public IP
+  - name: Public IP of VM
     debug:
-      msg: "The public IP is {{ output_ip_address.state.ip_address }}"
-- name: Create Network Security Group
+      msg: "The public IP is {{ output_ip_address.state.ip_address }}."
+  - name: Create Network Security Group that allows SSH
     azure_rm_securitygroup:
       resource_group: myResourceGroup
-      name: networkSecurityGroup
+      name: myNetworkSecurityGroup
       rules:
-        - name: 'allow_rdp'
+        - name: SSH
           protocol: Tcp
-          destination_port_range: 3389
+          destination_port_range: 22
           access: Allow
           priority: 1001
           direction: Inbound
-        - name: 'allow_web_traffic'
-          protocol: Tcp
-          destination_port_range:
-            - 80
-            - 443
-          access: Allow
-          priority: 1002
-          direction: Inbound
-        - name: 'allow_powershell_remoting'
-          protocol: Tcp
-          destination_port_range: 
-            - 5985
-            - 5986
-          access: Allow
-          priority: 1003
-          direction: Inbound
-
-  - name: Create a network interface
+  - name: Create virtual network interface card
     azure_rm_networkinterface:
-      name: nic
       resource_group: myResourceGroup
-      virtual_network: vNet
-      subnet_name: subnet
-      security_group: networkSecurityGroup
-      ip_configurations:
-        - name: default
-          public_ip_address_name: pip
-          primary: True
-- name: Create VM
+      name: myNIC
+      virtual_network: myVnet
+      subnet: mySubnet
+      public_ip_name: myPublicIP
+      security_group: myNetworkSecurityGroup
+  - name: Create VM
     azure_rm_virtualmachine:
       resource_group: myResourceGroup
-      name: win-vm
+      name: myVM
       vm_size: Standard_DS1_v2
       admin_username: azureuser
-      admin_password: "{{ password }}"
-      network_interfaces: nic
-      os_type: Windows
+      ssh_password_enabled: false
+      ssh_public_keys:
+        - path: /home/azureuser/.ssh/authorized_keys
+          key_data: "<key_data>"
+      network_interfaces: myNIC
       image:
-          offer: WindowsServer
-          publisher: MicrosoftWindowsServer
-          sku: 2019-Datacenter
-          version: latest
-    no_log: true
-- name: Create Azure VM
-  hosts: localhost
-  connection: local
-  vars_prompt:
-    - name: password
-      prompt: "Enter local administrator password"
+        offer: CentOS
+        publisher: OpenLogic
+        sku: '7.5'
+        version: latest
